--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
         
         // N8N Configuration - UPDATE THESE WITH YOUR N8N URLS
         const N8N_BASE_URL = 'http://localhost:5678'; // Change to your n8n URL
-        const N8N_QUESTION_WEBHOOK = `${http://localhost:5678/webhook/webhook-tally-questionL}/webhook/webhook-tally-question`;
-        const N8N_QA_SYNC_WEBHOOK = `${http://localhost:5678/webhook/webhook-tally-qa-sync}/webhook/webhook-tally-qa-sync`;
+        const N8N_QUESTION_WEBHOOK = `${N8N_BASE_URL}/webhook/webhook-tally-question`;
+        const N8N_QA_SYNC_WEBHOOK = `${N8N_BASE_URL}/webhook/webhook-tally-qa-sync`;
 
         // Initialize Supabase client
         let supabaseClient;
