--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZqdXZjemdieGN4d2lmamdqcGt2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEyODA2OTUsImV4cCI6MjA2Njg1NjY5NX0.ZohvZVAdkVn3Rcpeh03tP1uSxdPbgkwr8E0kcIoeoYE';
         
         // N8N Configuration - UPDATE THESE WITH YOUR N8N URLS
-        const N8N_BASE_URL = 'https://your-n8n-cloud-url.com'; // Change to your n8n URL
+        const N8N_BASE_URL = 'https://anjali123456.app.n8n.cloud'; // Change to your n8n URL
         const N8N_QUESTION_WEBHOOK = `${N8N_BASE_URL}/webhook/webhook-tally-question`;
         const N8N_QA_SYNC_WEBHOOK = `${N8N_BASE_URL}/webhook/webhook-tally-qa-sync`;
 
