--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ async function testN8NConnection() {
         async function initializeSupabase() {
             try {
                 // Check if Supabase credentials are configured
-                if (SUPABASE_URL === 'https://anjali123456.app.n8n.cloud/webhook/webhook-tally-question' || SUPABASE_ANON_KEY === 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZqdXZjemdieGN4d2lmamdqcGt2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEyODA2OTUsImV4cCI6MjA2Njg1NjY5NX0.ZohvZVAdkVn3Rcpeh03tP1uSxdPbgkwr8E0kcIoeoYE') {
+                if (SUPABASE_URL === 'https://vjuvczgbxcxwifjgjpkv.supabase.co' || SUPABASE_ANON_KEY === 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZqdXZjemdieGN4d2lmamdqcGt2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEyODA2OTUsImV4cCI6MjA2Njg1NjY5NX0.ZohvZVAdkVn3Rcpeh03tP1uSxdPbgkwr8E0kcIoeoYE') {
                     showConnectionError('Please configure your Supabase credentials in the JavaScript code');
                     return;
                 }
